Scribe Enhancements support PR

--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -1319,6 +1319,7 @@
   "total_beds": "Total Beds",
   "total_staff": "Total Staff",
   "total_users": "Total Users",
+  "transcribe_again": "Transcribe Again",
   "transcript_edit_info": "You can update this if we made an error",
   "transcript_information": "This is what we heard",
   "transfer_allowed": "Transfer Allowed",
